[gd_scene load_steps=12 format=2]

[ext_resource path="res://robots/robot.gd" type="Script" id=1]
[ext_resource path="res://robots/robot_1.png" type="Texture" id=2]
[ext_resource path="res://robots/robot_2.png" type="Texture" id=3]
[ext_resource path="res://robots/robot_3.png" type="Texture" id=4]
[ext_resource path="res://robots/robot_4.png" type="Texture" id=5]
[ext_resource path="res://robots/wheels.wav" type="AudioStream" id=6]
[ext_resource path="res://robots/boom.wav" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 12.663
height = 7.02481

[sub_resource type="ParticlesMaterial" id=3]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.0
angular_velocity = 6.76827e-43
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
color = Color( 0.301961, 1, 0, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Gravity", "Initial Velocity", "Spread", "Trail" ]

[sub_resource type="ParticlesMaterial" id=4]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.0
angular_velocity = 6.76827e-43
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
color = Color( 1, 0, 0.301961, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Gravity", "Initial Velocity", "Spread", "Trail" ]

[node name="robot" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pause", "Pickable", "Transform", "Z Index", "collision" ]
has_focus = false

[node name="animations" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "walk"
playing = true

[node name="shape" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )

[node name="push_r" type="RayCast2D" parent="." index="2"]

position = Vector2( 0, 8 )
enabled = true
exclude_parent = true
cast_to = Vector2( 16, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="push_l" type="RayCast2D" parent="." index="3"]

position = Vector2( 0, 8 )
enabled = true
exclude_parent = true
cast_to = Vector2( -16, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="beam" type="RayCast2D" parent="." index="4"]

position = Vector2( 0, -16 )
enabled = true
exclude_parent = true
cast_to = Vector2( 32, -32 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="wheels_sound" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 6 )
volume_db = -20.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="boom" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 7 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="beam_hit_green" type="Particles2D" parent="." index="7"]

emitting = false
amount = 128
lifetime = 0.25
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 3 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time" ]

[node name="beam_hit_red" type="Particles2D" parent="." index="8"]

emitting = false
amount = 128
lifetime = 0.25
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 4 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time" ]


